src/objects/Amr_Saving__c.object
<CustomObject>
    <fields>
        <fullName>Stage_RAP_engaged__c</fullName>
        <label>Stage RAP engaged</label>
        <picklist>
            <picklistValues>
                <fullName>Before briefing the agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Before getting a response to the brief (eg storyboard)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Before getting quotations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Before final selection of the supplier/production company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Before physical production (eg shoot, contract)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>After completion</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sum_Of_Total_Cost__c</fullName>
        <label>Sum Of Total Cost</label>
        <summarizedField>Amr_Quote__c.Total_Cost__c</summarizedField>
        <summaryForeignKey>Amr_Quote__c.Saving__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sum_Of_Total_Cost_of_Accepted_Quotes__c</fullName>
        <label>Sum Of Total Cost of Accepted Quotes</label>
        <summarizedField>Amr_Quote__c.Total_Cost__c</summarizedField>
        <summaryFilterItems>
            <field>Amr_Quote__c.Is_Accepted__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Amr_Quote__c.Saving__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Accepted_FinalCost__c</fullName>
        <label>Total Accepted FinalCost</label>
        <summarizedField>Amr_Quote__c.Total_Accepted_Final_Cost_CA_PC_PPC_Eu__c</summarizedField>
        <summaryForeignKey>Amr_Quote__c.Saving__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Accepted_Final_Cost_Text__c</fullName>
        <formula>TEXT(Total_Accepted_FinalCost__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Accepted Final Cost Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Editing_Cost__c</fullName>
        <label>Total Editing Cost</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_No_Of_Films_Text__c</fullName>
        <formula>TEXT(Total_no_of_films__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total No Of Films Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Sound_Studio__c</fullName>
        <label>Total Sound Studio</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_no_of_films__c</fullName>
        <formula>No_of_Masters__c + No_of_Additional_Films__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total no of films</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Travel_Costs__c</fullName>
        <label>Travel Costs</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_of_Saving__c</fullName>
        <label>Type of Saving</label>
        <picklist>
            <picklistValues>
                <fullName>Cost Saving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cost Avoidance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Value_of_props_wardrobe__c</fullName>
        <label>Value of props &amp; wardrobe (paid for)</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Amr Saving</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>Sum_Of_Total_Cost__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>NAME</columns>
        <columns>Job_Details__c</columns>
        <columns>Saving_Average_of_Quotes__c</columns>
        <columns>Average_Total_Opening_Quotes__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>AM_Saving Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Amr Savings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>